--- a/css/style.css
+++ b/css/style.css
@@ -1578,475 +1578,106 @@ aspect-ratio: 1/1;
 /* ----------- Partners Section ------------ */
 
 /*---------------Questions--------------------*/
-.questioncard {
-    display: block;
-    padding-top: 17px;
-    padding-bottom: 17px;
-    border-radius: 10px;
-    background: #FFF;
-    border: 1px solid #282828;
-    border-radius: 80px;
-    margin-bottom: 30px;
-}
-
 #questions {
     border-bottom: 1px solid black;
     border-radius: 100px;
-}
-
-
-.questioncard>input[type="checkbox"] {
-    display: none;
-}
-
-.questioncard>label {
-    display: block;
-    padding: 5px 0;
-    color: #282828;
-    font-size: 24px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 29px;
-    position: relative;
-    cursor: pointer;
-    margin-left: 31px;
-    padding: 30px;
-}
-
-.questioncard>label::after,
-.questioncard>label::before {
-    content: '';
-    display: block;
-    width: 21px;
-    height: 2px;
-    margin-right: 79px;
-    background: #000000;
-    position: absolute;
-    top: 50%;
-    right: 0;
-}
-
-.questioncard>label::after {
-    transform: translateY(-50%);
-}
-
-.questioncard>label::before {
-    transform: translateY(-50%) rotate(90deg);
-}
-
-.question__hidden {
-    display: none;
-    font-size: 24px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 29px;
-    margin-top: 33px;
-    padding-bottom: 53px;
-    margin-left: 50px;
-}
-
-.questioncard>input:checked~label::before {
-    display: none;
-}
-
-.questioncard>input:checked~.question__hidden {
-    display: block;
-}
-
-.question-container {
-    margin-bottom: 10px;
-}
-
-.questions {
-    padding-left: 51px;
-    padding-right: 50px;
-    padding-bottom: 200px;
     margin-bottom: 50px;
 }
 
-.name-question {
-    padding-bottom: 62px;
-    color: #282828;
-    font-size: 64px;
-    line-height: 68px;
-    font-weight: 400;
+.question{
+    margin-bottom: 200px;
 }
 
-@media (max-width: 1025px) {
-    .questioncard>label {
-        margin-left: 15px;
-        font-size: 23px;
-    }
-
-    .question__hidden {
-        font-size: 23px;
-    }
+.question__title {
+    margin-bottom: 40px;
 }
 
-@media (max-width: 980px) {
-    .questioncard>label {
-        margin-left: 15px;
-        font-size: 22px;
-    }
-
-    .question__hidden {
-        font-size: 22px;
-    }
+.question__accordion__item {
+    padding: 0 30px;
+    padding-bottom: 20px;
+    border-radius: 100px;
+    border: 1px solid #000000;
+    margin-bottom: 30px;
 }
 
-@media (max-width: 970px) {
-    .questioncard>label {
-        margin-left: 15px;
-        font-size: 21px;
-    }
-
-    .question__hidden {
-        font-size: 21px;
-    }
+.question__accordion__question {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-top: 20px;
+    margin: 0;
+    cursor: pointer;
 }
 
-@media (max-width: 920px) {
-    .questioncard>label {
-        margin-left: 15px;
-        font-size: 19px;
-    }
-
-    .question__hidden {
-        font-size: 19px;
-    }
+.question__accordion__question::after {
+    content: url(../lib/DownArrow.svg);
+    transition: transform 0.3s ease-in-out;
 }
 
-@media (max-width: 870px) {
-    .questioncard>label {
-        margin-left: 15px;
-        font-size: 18px;
-        white-space: pre-line;
-
-    }
-
-    .question__hidden {
-        font-size: 18px;
-    }
-
-
+.question__accordion__answer{
+    max-height: 0;
+    overflow: hidden;
+    opacity: 1;
+    transition: opacity 0.3s ease, max-height 0.3s ease;
 }
 
-@media (max-width: 815px) {
-    .questioncard>label {
-        margin-left: 15px;
-        font-size: 18px;
-        white-space: pre-line;
-
-
-    }
-
-    .question__hidden {
-        font-size: 18px;
-    }
-
-
+.question__accordion__question--active::after {
+    transform: rotate(180deg);
+    transition: transform 0.3s ease;
+    margin-top: 30px;    
 }
 
-@media (max-width: 750px) {
-    .questioncard>label {
-        margin-left: 15px;
-        font-size: 17px;
-        white-space: pre-line;
-
-
-    }
-
-    .question__hidden {
-        font-size: 17px;
-    }
-
-
-}
-
-@media (max-width: 720px) {
-    .questioncard>label {
-        margin-left: 15px;
-        font-size: 16px;
-        white-space: pre-line;
-        padding: 20px;
-
-
-    }
-
-    .question__hidden {
-        font-size: 16px;
-    }
-
-
-}
-
-@media (max-width: 670px) {
-    .questioncard>label {
-        margin-left: 15px;
-        font-size: 16px;
-        white-space: pre-line;
-        padding: 17px;
-
-
-    }
-
-    .question__hidden {
-        font-size: 16px;
-    }
-
-    .questioncard {
-        width: 588px;
-
-    }
-
-
-}
-
-@media (max-width: 640px) {
-    .questioncard>label {
-
-        margin-left: 15px;
-        font-size: 16px;
-        white-space: pre-line;
-        padding: 17px;
-
-
-    }
-
-    .question__hidden {
-        font-size: 16px;
-    }
-
-    .questioncard {
-        width: 573px;
-
-    }
-
-
-
-}
-
-@media (max-width: 600px) {
-    .questioncard>label {
-
-        margin-left: 15px;
-        font-size: 15px;
-        white-space: pre-line;
-        padding: 12px;
-
-
-    }
-
-    .question__hidden {
-        font-size: 15px;
-    }
-
-    .questioncard {
-        width: auto;
-
-    }
-
-
-
-}
-
-@media (max-width: 585px) {
-    .questioncard>label {
-
-        margin-left: 15px;
-        font-size: 14px;
-        white-space: pre-line;
-        padding: 10px;
-
-
-    }
-
-    .question__hidden {
-        font-size: 14px;
-    }
-
-    .questioncard {
-        width: auto;
-
-    }
-
-
-
-}
-
-@media (max-width: 565px) {
-    .questioncard>label {
-
-        margin-left: 15px;
-        font-size: 14px;
-        white-space: pre-line;
-        padding: 10px;
-
-
-    }
-
-    .question__hidden {
-        font-size: 14px;
-    }
-
-    .questioncard {
-        width: 443px;
-
-    }
-
-    .questioncard>label::after,
-    .questioncard>label::before {
-        background-color: #c8e8c300;
-
-
-    }
-}
-
-@media (max-width: 485px) {
-    .questioncard>label {
-
-        margin-left: 15px;
-        font-size: 14px;
-        white-space: pre-line;
-        padding: 10px;
-
-
-    }
-
-    .question__hidden {
-        font-size: 14px;
-    }
-
-    .questioncard {
-        width: 325px;
-
-    }
-
-    .questioncard>label::after,
-    .questioncard>label::before {
-        background-color: #c8e8c300;
-
-
-    }
-
-    .name-question {
-        margin-left: 0px;
-    }
-
-}
-
-@media (max-width: 395px) {
-    .name-question {
-        margin-left: 0px;
-        font-size: 53px;
-    }
-
-    .questioncard {
-        width: 280px;
-
-    }
-}
-
-@media (max-width: 360px) {
-    .questioncard>label {
-
-        margin-left: 15px;
-        font-size: 14px;
-        white-space: pre-line;
-        padding: 10px;
-
-
-    }
-
-    .question__hidden {
-        font-size: 14px;
-    }
-
-    .questioncard {
-        width: 260px;
-
-    }
-
-    .questioncard>label::after,
-    .questioncard>label::before {
-        background-color: #c8e8c300;
-
-    }
-
-    .name-question {
-        margin-left: 0px;
-    }
-
+.question__accordion__answer--visible {
+    opacity: 1;
+    margin-bottom: 30px;
 }
 
 /*---------------Questions--------------------*/
 
-/* ----------------- footer --------------------- */
+/* ----------------- Footer --------------------- */
 /* Основные стили футера */
 footer {
     background-color: #4B4B4B;
     color: #FFFFFF;
-    padding: 50px 0;
+    padding: 30px 0;
 }
 
 .footer__container {
-    max-width: 1200px;
-    margin: 0 auto;
-    /* padding: 0 20px; */
-}
-
-.footer-content {
     display: flex;
     gap: 60px;
+    max-width: 1630px;
+    margin: 0 auto;
 }
 
-/* Блок с логотипом */
-.footer-logo {
-    flex: 0 0 250px;
-
-}
-
-.logo-img {
-    width: 400px;
-    height: 400px;
-    border-radius: 4px;
-    margin-left: -55px;
-
-}
-
-/* Правый блок контента */
 .footer-right {
     flex: 1;
     display: flex;
     flex-direction: column;
 }
 
-/* Навигационное меню */
 .footer-nav {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: flex-start;
     gap: 25px;
-    margin-bottom: 40px;
+    margin-top: 40px;
 }
 
 .footer-link {
     color: #FFFFFF;
-    text-decoration: none;
-    font-size: 18px;
     transition: color 0.3s;
 }
-
-.footer-link:hover {
+.footer-link:hover,
+.footer-link:focus {
     color: #CCCCCC;
 }
 
-/* Блок контактов */
 .footer-contacts {
     display: flex;
     justify-content: space-between;
-    margin-bottom: 40px;
-    margin-top: 50px;
+    margin-bottom: 70px;
+    margin-top: 100px;
 }
 
 .contacts-info {
@@ -2058,19 +1689,10 @@ footer {
 .contact-item {
     display: flex;
     align-items: center;
-    gap: 10px;
+    gap: 15px;
 }
-
-.contact-type {
-    font-size: 18px;
-}
-
-/* Блок мессенджеров */
-
 
 .messengers-caption {
-    display: block;
-    font-size: 18px;
     margin-bottom: 15px;
 }
 
@@ -2081,49 +1703,67 @@ footer {
 }
 
 .messenger-link img {
-    width: 50px;
-    height: 50px;
     transition: transform 0.3s;
 }
-
-.messenger-link img:hover {
+.messenger-link img:hover,
+.messenger-link img:focus {
     transform: scale(1.1);
 }
 
-/* Нижний блок с кнопкой */
 .footer-actions {
     display: flex;
     justify-content: space-between;
-    align-items: center;
+    align-items: flex-end;
     margin-top: 60px;
-}
-
-.consult-button {
-    background-color: #1C4C5E;
-    color: #FFFFFF;
-    border: none;
-    border-radius: 30px;
-    padding: 15px 30px;
-    font-size: 16px;
-    cursor: pointer;
-    transition: background-color 0.3s;
-}
-
-.consult-button:hover {
-    background-color: #0F3545;
 }
 
 .privacy-policy {
     color: rgba(255, 255, 255, 0.8);
     text-decoration: none;
     font-size: 14px;
-    transition: color 0.3s;
-}
-
-.privacy-policy:hover {
-    color: #FFFFFF;
+    transition: all 0.3s ease-in-out;
     text-decoration: underline;
 }
+.privacy-policy:hover,
+.privacy-policy:focus {
+    color: #FFFFFF;
+    text-decoration: none;
+}
+
+.consult-button {
+    background-color: #295D70;
+    color: white;
+    cursor: pointer;
+    border-radius: 40px;
+    padding: 25px 35px;
+    font-size: 22px;
+    font-weight: 100;
+    border: none;
+    transition: all 0.3s ease-in-out;
+}
+.consult-button:hover,
+.consult-button:focus {
+    background-color: #0F3545;
+    box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.295);
+}
+
+
+.hero__btn {
+    background: #295D70;
+    color: white;
+    cursor: pointer;
+    border-radius: 40px;
+    padding: 25px 35px;
+    font-size: 24px;
+    border: none;
+    transition: all 0.3s ease-in-out;
+}
+.hero__btn:hover,
+.hero__btn:focus {
+    background: #38929C;
+    box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.295);
+}
+
 
 /* Адаптивность */
 @media (max-width: 1300px) {
@@ -2179,14 +1819,6 @@ footer {
     .footer__container {
         padding: 30px 20px;
         gap: 20px;
-    }
-
-    .footer-nav {
-        flex-direction: row;
-        gap: 35px;
-        align-items: flex-start;
-        margin-right: 63px;
-
     }
 
     .consult-button {
