--- a/css/style.css
+++ b/css/style.css
@@ -648,7 +648,8 @@ p {
     }
     .cubes-grid{
         grid-template-columns: 171px 171px;
-        top: 55%;
+        top: 50%;
+        right: 20px;
         gap: 20px;
         margin-right: 0;
     }    
@@ -666,7 +667,10 @@ p {
         margin-top: 50px;
     }
     .hero__content {
-        min-height: 500px;
+        min-height: 630px;
+    }
+    .hero__wrapper {
+        margin: 0 13px;
     }
 }
 @media (max-width: 570px) {
@@ -692,7 +696,28 @@ p {
     .hero__content {
         min-height: 630px;
     }
+    .cubes-grid{
+        right: 0;
+        top: 55%;
+    }  
 }
+@media (max-width: 400px) {
+    .cubes-grid {
+        display: none;
+    }
+    .hero__btn {
+        padding: 15px 15px;
+        width: 90%;
+    }
+    .hero__description {
+        margin-bottom: 50px;
+        max-width: 100%;
+    }
+    .hero__content {
+        min-height: 430px;
+    }
+}
+
 /* ----------- Hero Section ------------ */
 
 /* ----------- Help Section ------------ */
@@ -925,7 +950,7 @@ p {
    }
    .extra--help-content-subtitle {
     margin-left: 0;
-}
+    }
 }
 @media (max-width: 1045px) {
     .extra--help__title {
@@ -1613,7 +1638,7 @@ aspect-ratio: 1/1;
 
 /* ----------- Form Section ------------ */
 .form {
-    background-image: url("../lib/waveCurve.svg");
+    background-image: url("../lib/waveCurve.png");
     background-size: cover;
     background-repeat: no-repeat;
     width: 100%;
@@ -1978,6 +2003,37 @@ aspect-ratio: 1/1;
     margin-bottom: 30px;
 }
 
+/* adaptation */
+@media (max-width: 1300px) {
+    .question__title {
+        margin-left: 0;
+    }
+}
+@media (max-width: 1045px) {
+    .hero__content {
+        max-width: 754px;
+    }
+    .navbar__links{
+        display: none;
+    }
+    .navbar__right{
+        position: absolute;
+        right: 0;
+        margin-right: 60px;
+    }   
+    .menu__burger {
+        display: block;
+    }
+    .navbar__logo-image{
+        width: 110px;
+    }
+    .burger-header {
+        display: block;
+    }
+}
+
+
+
 /*---------------Questions--------------------*/
 
 /* ----------------- Footer --------------------- */
@@ -2096,242 +2152,130 @@ footer {
 /* Адаптивность */
 @media (max-width: 1300px) {
     .footer__container {
-        padding: 70px;
+        margin: 0 20px;
+        row-gap: 15px;
     }
-
     .footer-nav {
-        gap: 17px;
+        gap: 20px;
+        margin-top: 0;
+    }
+    .footer-link h3 {
+        margin-left: 0;
+    }
+    .footer-img{
+        min-width: 306px;
+        min-height: 229px;
+        max-width: 476px;
+        max-height: 400px;
+    }
+    .footer-contacts{
+        margin-top: 30px;
         margin-bottom: 30px;
-    }
-
-}
-
-@media (max-width: 1180px) {
-    .footer__container {
-        padding: 30px 20px;
-        gap: 20px;
-    }
-
-    .footer-nav {
-        flex-direction: row;
-        align-items: flex-start;
-
-    }
-
-    .logo-img {
-        width: 328px;
-        height: 337px;
-        margin-left: 15px;
-    }
-
-    .footer-actions {
-        flex-direction: column;
-        gap: 20px;
-        align-items: flex-start;
-    }
-
-    .consult-button {
-        margin-top: -55px;
-        margin-left: 20px;
-        width: 525px;
-    }
-
-    .messenger-link img {
-        width: 30px;
-        height: 30px;
-        transition: transform 0.3s;
-    }
-}
-
-@media (max-width: 1000px) {
-    .footer__container {
-        padding: 30px 20px;
-        gap: 20px;
-    }
-
-    .consult-button {
-        margin-top: -55px;
-        margin-left: 20px;
-        width: 550px;
-    }
-
-    .logo-img {
-        width: 309px;
-        height: 431px;
-        margin-top: -20px;
-    }
-}
-
-@media (max-width: 960px) {
-
-    .footer__container {
-        padding: 25px 10px;
-        gap: 20px;
-    }
-
-    .consult-button {
-        margin-top: -55px;
-        margin-left: 20px;
-        width: 440px;
-    }
-
-    .logo-img {
-        width: 347px;
-        height: 261px;
-        margin-top: 28px;
-    }
-}
-
-@media (max-width: 768px) {
-    .logo-img {
-        width: 820px;
-        height: 337px;
-        margin-top: -20px;
-    }
-}
-
-@media (max-width: 768px) {
-    .footer__container {
-        padding: 25px 10px;
-        gap: 20px;
-    }
-
-    .footer-content {
-        flex-direction: column;
-        gap: 30px;
-    }
-
-    .footer-logo {
-        flex: 1;
-        max-width: 200px;
-    }
-
-    .footer-nav {
+        flex-wrap: wrap;
         gap: 10px;
-        margin-bottom: 30px;
-        justify-content: space-around;
-        margin-right: 0px;
     }
-
-    .footer-contacts {
-        flex-direction: column;
-        gap: 30px;
+    .contact-type {
+        margin-left: 0;
     }
-
-    .messengers-block {
-        text-align: left;
+    .messengers-caption {
+        margin-left: 0;
     }
-
-    .messengers-list {
-        justify-content: flex-start;
-    }
-
     .footer-actions {
-        flex-direction: column;
-        gap: 20px;
-        align-items: flex-start;
-    }
-
-    .logo-img {
-        width: 820px;
-        height: 337px;
-        margin-top: -20px;
-    }
-
-    .consult-button {
-        margin-top: -55px;
-        margin-left: 20px;
-        width: 525px;
-    }
-}
-
-@media (max-width: 540px) {
-    .consult-button {
-        margin-top: -55px;
-        margin-left: 20px;
-        width: 525px;
-    }
-}
-
-@media (max-width: 480px) {
-
-    .footer__container {
-        padding: 25px 10px;
+        margin-top: 0;
+        flex-wrap: wrap;
         gap: 20px;
     }
-
-    .footer-link {
-        font-size: 15px;
+    .privacy-policy h3 {
+        margin-left: 0;
     }
-
-    .contact-text {
-        font-size: 15px;
-    }
-
-    .consult-btn {
-        padding: 10px 15px;
-        font-size: 14px;
-
-
-    }
-
     .consult-button {
-        margin-top: -55px;
-        margin-left: 20px;
-        width: 360px;
-    }
-
-    .privacy-policy {
-        margin-left: 10px;
-    }
-
-    .logo-img {
-        width: 357px;
-        height: 337px;
-        margin-top: -20px;
-    }
-
-    .footer-nav {
-        flex-direction: row;
-        gap: 30px;
-        align-items: flex-start;
+        font-size: 16px;
     }
 }
-
-@media (max-width: 420px) {
-    .footer__container {
-        padding: 25px 10px;
-        gap: 20px;
+@media (max-width: 1125px) {
+    .messengers-block {
+        display: none;
     }
-
-    .footer-nav {
-        flex-direction: row;
+}
+@media (max-width: 1045px) {
+    .contacts-info {
+        gap: 10px;
+   } 
+   .footer-nav {
+        max-width: 754px;
+        position: absolute;
         gap: 25px;
-        align-items: flex-start;
+        left: 0;
+    }
+    .footer-img {
+        max-width: 306px;
+        max-height: 229px;
+        object-fit: cover;
+        border-radius: 20px;
+        margin-top: 50px;
+    }
+    .footer-contacts {
+        margin-top: 50px;
+        margin-bottom: 10px;
+    }
+    .consult-button {
+        padding: 15px 25px;
+    }
+    .footer-actions {
+        gap: 10px;
     }
 }
-
-@media (max-width: 360px) {
+@media (max-width: 910px) {
+    .footer-img {
+        margin-top: 100px;
+    }
+    .footer-contacts {
+        margin-top: 100px;
+    }
+    .footer-logo {
+        order: 2;
+    } 
+    .footer-right {
+        order: 1;
+    }
     .footer__container {
-        padding: 25px 10px;
-        gap: 20px;
+        flex-wrap: wrap;
     }
-
-    .consult-button {
-        margin-top: -55px;
-        margin-left: 10px;
-        width: 331px;
-    }
-
-    .logo-img {
-        width: 295px;
-        height: 337px;
-        margin-top: -20px;
-    }
-
+}
+@media (max-width: 769px) {
     .footer-nav {
-        flex-direction: row;
-        gap: 17px;
-        align-items: flex-start;
+        row-gap: 5px;
+    }
+    .contact-item-img {
+        max-width: 25px;
+        max-height: 25px;
+    }
+}
+@media (max-width: 761px) {
+    
+    .footer__container {
+        row-gap: 15px;
+    }
+    .footer__container {
+        margin: 0 10px;
+    }
+}
+@media (max-width: 601px) {
+    .footer-img {
+        margin-top: 0;
+        min-width: 362px;
+        max-height: 229px;
+    }
+}
+@media (max-width: 420px) {
+    .footer-img {
+        margin-top: 0;
+        min-width: auto;
+        max-height: 229px;
+    }
+}
+@media (max-width: 300px) {
+    .footer-contacts {
+        margin-top: 140px;
     }
 }
